fix animation bg issue, add scrollbar colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,12 @@
     }
   }
 }
+::-webkit-scrollbar {
+  width: 0.4em;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ffdf20;
+  border-radius: 0.2em;
+  transition: all 2s ease-in-out;
+}
